--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,4 @@
-[pytest]
-python_files = test.py
-norecursedirs = *
+[flake8]
+ignore = E301
+import_order_style = google
+application-import-names = lets
