Implement lets.slavery

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,6 @@ import_order_style = google
 application-import-names = lets
 
 [pytest]
-addopts = test.py
+python_files = test.py
+testpaths = .
+confcutdir = .
