--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,41 @@ sudo: false
 python:
 - 2.6
 - 2.7
-# - pypy  # gipc doesn't support PyPy.
+# pypy  # gipc doesn't support PyPy.
+env:
+  matrix:
+  - GEVENT_VERSION=1.1rc2
+  - GEVENT_VERSION=1.1rc1
+  - GEVENT_VERSION=1.1b6
+  - GEVENT_VERSION=1.1b5
+  - GEVENT_VERSION=1.1b4
+  - GEVENT_VERSION=1.1b3
+  - GEVENT_VERSION=1.1b2
+  - GEVENT_VERSION=1.1b1
+  - GEVENT_VERSION=1.1a2
+  - GEVENT_VERSION=1.1a1
+  - GEVENT_VERSION=1.0.2
+  - GEVENT_VERSION=1.0.1
+  - GEVENT_VERSION=1.0
+  - GEVENT_VERSION=1.0rc3
+  - GEVENT_VERSION=1.0rc2
+  - GEVENT_VERSION=1.0rc1
+  - GEVENT_VERSION=1.0b4
+  - GEVENT_VERSION=1.0b3
+  - GEVENT_VERSION=1.0b2
+  - GEVENT_VERSION=1.0b1
+  - GEVENT_VERSION=1.0a3
+  - GEVENT_VERSION=1.0a2
+  - GEVENT_VERSION=1.0a1
 install:
 - pip install coveralls
+- |
+  if [[ -z "$GEVENT_VERSION" ]]; then
+    pip install gevent
+  else
+    pip install gevent==$GEVENT_VERSION
+  fi
+  pip install -e .
 script:
 - coverage run --source=lets setup.py test
 after_success:
