gipc-0.6.0 requires gevent>=1.1b1

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,29 +6,30 @@ python:
 # pypy  # gipc doesn't support PyPy.
 env:
   matrix:
-  - GEVENT_VERSION=1.1rc2
-  - GEVENT_VERSION=1.1rc1
-  - GEVENT_VERSION=1.1b6
-  - GEVENT_VERSION=1.1b5
-  - GEVENT_VERSION=1.1b4
-  - GEVENT_VERSION=1.1b3
-  - GEVENT_VERSION=1.1b2
-  - GEVENT_VERSION=1.1b1
-  - GEVENT_VERSION=1.1a2
-  - GEVENT_VERSION=1.1a1
-  - GEVENT_VERSION=1.0.2
-  - GEVENT_VERSION=1.0.1
-  - GEVENT_VERSION=1.0
-  - GEVENT_VERSION=1.0rc3
-  - GEVENT_VERSION=1.0rc2
-  - GEVENT_VERSION=1.0rc1
-  - GEVENT_VERSION=1.0b4
-  - GEVENT_VERSION=1.0b3
-  - GEVENT_VERSION=1.0b2
-  - GEVENT_VERSION=1.0b1
-  - GEVENT_VERSION=1.0a3
-  - GEVENT_VERSION=1.0a2
-  - GEVENT_VERSION=1.0a1
+  -
+  - GEVENT_VERSION=1.1rc2 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1rc1 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b6 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b5 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b4 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b3 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b2 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1b1 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1a2 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.1a1 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0.2 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0.1 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0rc3 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0rc2 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0rc1 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0b4 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0b3 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0b2 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0b1 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0a3 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0a2 GIPC_VERSION=0.5.0
+  - GEVENT_VERSION=1.0a1 GIPC_VERSION=0.5.0
 install:
 - pip install coveralls
 - |
@@ -36,6 +37,11 @@ install:
     pip install gevent
   else
     pip install gevent==$GEVENT_VERSION
+  fi
+  if [[ -z "$GIPC_VERSION" ]]; then
+    pip install gipc
+  else
+    pip install gipc==$GIPC_VERSION
   fi
   pip install -e .
 script:
