Test on gevent-1.1.0 and 1.1rc3~4

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ python:
 env:
   matrix:
   -
+  - GEVENT_VERSION=1.1.0 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1rc5 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1rc4 GIPC_VERSION=0.6.0
+  - GEVENT_VERSION=1.1rc3 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1rc2 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1rc1 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1b6 GIPC_VERSION=0.6.0
