Test on gevent-1.1.2

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 env:
   matrix:
   -
+  - GEVENT_VERSION=1.1.2 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1.1 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1.0 GIPC_VERSION=0.6.0
   - GEVENT_VERSION=1.1rc5 GIPC_VERSION=0.6.0
