--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,10 @@ python:
 env:
   matrix:
   -
-  - GEVENT_VERSION=1.2a2
-  - GEVENT_VERSION=1.2a1
+  - GEVENT_VERSION=1.2.1
+  - GEVENT_VERSION=1.2.0
+  # - GEVENT_VERSION=1.2a2
+  # - GEVENT_VERSION=1.2a1
   - GEVENT_VERSION=1.1.2
   - GEVENT_VERSION=1.1.1
   - GEVENT_VERSION=1.1.0
@@ -18,7 +20,7 @@ install:
   if [[ -z "$GEVENT_VERSION" ]]; then
     pip install gevent
   else
-    pip install gevent==$GEVENT_VERSION
+    pip install gevent=="$GEVENT_VERSION"
   fi
   pip install -e .
 script:
