--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,10 @@
 [flake8]
-ignore = E301, E731, F405
+ignore = E301, E306, E731, E741, F405
 import_order_style = google
 application-import-names = lets
+
+[pycodestyle]
+ignore = E301, E306, E731, E741, F405
 
 [tool:pytest]
 python_files = test.py
